tests/NormalTests/paczka1/fuzzy1/93588852.err
Error in line 1: 6RmjrcnFMmD S238 53,8
Error in line 4: 6RmjrcnFMmD S575 973,1
Error in line 3: zUfc6h7Rb3m S575 45,0
Error in line 9: eprKQmo6 A826 259,24
Error in line 10: ExDlIKKK8 A82$ $3,0
Error in line 7: zUfc6h7Rb3m A826 63,5
Error in line 5: ExDlIKKK8 A826 56,6
Error in line 18: S575 A826 12,8
Error in line 27: KJvzOy7kAnA S238 16,6
Error in line 29: ExDlIKKK8 S567 43,1
Error in line 31: S575 S567 98,3
Error in line 35: S575 A826 32,0
